--- a/resnet-fl.ipynb
+++ b/resnet-fl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-17T18:19:26.139829Z",
@@ -2037,7 +2037,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2051,7 +2051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
